// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewHeader Element adds expanded modifier 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 0 15px;
  background-color: #f7f7f7;
  border-top: 1px solid #d5d6d9;
  border-bottom: 1px solid #d5d6d9;
  overflow: visible;
  min-height: 46px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 0 10vw;
  z-index: 1;
}

<header
  className="c0"
/>
`;

exports[`PreviewHeader Element renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 0 15px;
  background-color: #f7f7f7;
  border-top: 1px solid #d5d6d9;
  border-bottom: 1px solid #d5d6d9;
  overflow: visible;
  min-height: 46px;
}

<header
  className="c0"
>
  Preview
</header>
`;
